--- a/user-service/package.json
+++ b/user-service/package.json
@@ -37,6 +37,8 @@
     "@willsoto/nestjs-prometheus": "^3.0.0",
     "aws-sdk": "^2.922.0",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^5.0.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "jsonwebtoken": "^8.5.1",
