--- a/user-service/env/local.env
+++ b/user-service/env/local.env
@@ -10,3 +10,6 @@ AWS_ACCESS_KEY_ID = AKIAZGDDKEFLBN2UVJVZ
 AWS_SECRET_ACCESS_KEY = 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
 REDIS_HOST = localhost
 REDIST_PORT = 6379
+NATS_CLIENT_ID = user-service-publisher
+NATS_CLUSTER_ID = my-cluster
+NATS_URL = http://127.0.0.1:4222
