--- a/entity-service/env/local.env
+++ b/entity-service/env/local.env
@@ -8,3 +8,6 @@ TYPEORM_DATABASE_NAME = retail
 AWS_S3_BUCKET_NAME = stag2a-retail-public-bucket.doxa-holdings.com
 AWS_ACCESS_KEY_ID = AKIAZGDDKEFLBN2UVJVZ
 AWS_SECRET_ACCESS_KEY = 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
+NATS_CLIENT_ID = entity-service-publisher
+NATS_CLUSTER_ID = my-cluster
+NATS_URL = http://127.0.0.1:4222
