mai co ro so vit

--- a/user-service/env/local.env
+++ b/user-service/env/local.env
@@ -8,8 +8,8 @@ TYPEORM_DATABASE_NAME = retail
 AWS_S3_BUCKET_NAME = stag2a-retail-public-bucket.doxa-holdings.com
 AWS_ACCESS_KEY_ID = AKIAZGDDKEFLBN2UVJVZ
 AWS_SECRET_ACCESS_KEY = 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
-REDIS_HOST = localhost
+REDIS_HOST = 44.202.26.62
 REDIST_PORT = 6379
 NATS_CLIENT_ID = user-service-publisher
 NATS_CLUSTER_ID = my-cluster
-NATS_URL = http://127.0.0.1:4222
+NATS_URL = http://44.202.26.62:4222
