--- a/user-auth/package.json
+++ b/user-auth/package.json
@@ -34,6 +34,7 @@
     "@nestjs/terminus": "^7.2.0",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.17",
+    "@us-tickets/common": "^1.0.4",
     "@willsoto/nestjs-prometheus": "^3.0.0",
     "aws-sdk": "^2.922.0",
     "bcrypt": "^5.0.1",
