--- a/user-auth/env/local.env
+++ b/user-auth/env/local.env
@@ -1,15 +1,16 @@
 TYPEORM_DATABASE_TYPE = postgres
-TYPEORM_DATABASE_HOST = doxa-retail-dev-stag2.cchui1al2in6.ap-southeast-1.rds.amazonaws.com
+TYPEORM_DATABASE_HOST = user-auth-hcmus-event-management.ceehqheakkfc.us-east-1.rds.amazonaws.com
 TYPEORM_DATABASE_PORT = 5432
-TYPEORM_DATABASE_PASSWORD = dfa9E8932jfdJF3Y988DFJAFIJFD832
-TYPEORM_DATABASE_USERNAME = doxaretail
-TYPEORM_DATABASE_NAME = retail
+TYPEORM_DATABASE_PASSWORD = postgres
+TYPEORM_DATABASE_USERNAME = postgres
+TYPEORM_DATABASE_NAME = postgres
 
 AWS_S3_BUCKET_NAME = stag2a-retail-public-bucket.doxa-holdings.com
 AWS_ACCESS_KEY_ID = AKIAZGDDKEFLBN2UVJVZ
 AWS_SECRET_ACCESS_KEY = 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
-REDIS_HOST = 100.26.100.60
+REDIS_HOST = 'redis-srv'
+REDIST_AUTH_PASS = 'Uhouse@12345'
 REDIST_PORT = 6379
 NATS_CLIENT_ID = user-service-publisher
-NATS_CLUSTER_ID = my-cluster
-NATS_URL = http://100.26.100.60:4222
+NATS_HOST='nats://nats-srv:4222'
+NATS_CLUSTER='uhouse-cluster'
