--- a/infra/k8s/entity-depl.yaml
+++ b/infra/k8s/entity-depl.yaml
@@ -16,5 +16,18 @@ spec:
           image: 19127098/entity
           # imagePullPolicy: Always
           resources:
+---
+apiVersion: v1 
+kind: Service 
+metadata:
+  name: entity-srv
+spec:
+  type: LoadBalancer
+  selector: 
+    app: entity   
+  ports:
+    - protocol: TCP
+      targetPort: 3000
+      port: 3000
             
     
